--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,65 @@
 asgiref==3.8.1
-blinker==1.9.0
+blinker==1.8.2
+cached-property==1.5.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
-config==0.5.1
 dateparser==1.2.0
-decouple==0.0.7
+distlib==0.3.9
 dj-database-url==2.3.0
 Django==5.1.2
+django-cors-headers==4.6.0
 django-extensions==3.2.3
+django-filter==24.3
 django-heroku==0.3.1
+django-jazzmin @ git+https://github.com/farridav/django-jazzmin.git@f3133f13b009d0d139642942abc7de9919b088ae
 djangorestframework==3.15.2
-dnspython==2.7.0
 docutils==0.21.2
+drf-yasg==1.21.8
+env==0.1.0
+filelock==3.16.1
 Flask==3.0.3
+future==1.0.0
 gunicorn==23.0.0
-include==0.2.2
+idna==3.10
+inflection==0.5.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
-lib==4.0.0
 lockfile==0.12.2
+lxml==4.9.4
 Markdown==3.7
 MarkupSafe==3.0.2
 mock==5.1.0
 note==0.5.2
+package_name==0.1
+packages==0.1.1
 packaging==24.2
+pillow==11.0.0
+platformdirs==4.3.6
 psycopg2==2.9.10
-pymongo==4.10.1
+psycopg2-binary==2.9.10
+pymongo==3.13.0
 python-daemon==3.1.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2024.2
+PyYAML==6.0.2
 pyzmq==26.2.0
-regex==2024.11.6
-setuptools==75.3.0
+redis==3.5.3
+regex==2024.9.11
+requests==2.32.3
+requests-cache==0.5.2
+serializers==0.2.4
 six==1.16.0
 sqlparse==0.5.1
 tornado==6.4.1
+tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
-Werkzeug==3.1.3
+uritemplate==4.1.1
+urllib3==2.2.3
+virtualenv==20.27.1
+Werkzeug==3.1.2
 whitenoise==6.8.2
